--- a/final-template/stylesheet.css
+++ b/final-template/stylesheet.css
@@ -34,7 +34,7 @@ h1 {
     margin-bottom: .25rem;
     /* font-style: italic; */
   }
-section#image{
+section#head{
     margin-top: 0;
     padding-top: 0;
 }
