all basic functionality done

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -4,6 +4,6 @@
     <div class="container">
         <h1 class="thin center" style="font-size:4rem">Automagic Websites</h1>
         <hr><br>
-        <p class="center">Coming soon!</p>
+        <p class="center">Easily create a custom, sleek, simple webpage for yourself in no time!</p>
     </div>
 {% endblock %}
