--- a/website/templates/account.html
+++ b/website/templates/account.html
@@ -1,10 +1,11 @@
 {% extends 'layout.html' %}
 {% block content %}
     <div class="container lighter">
+        <h2 class="">View your website <a href="{{ url_for('site', username=current_user.username) }}">here</a></h2><br>
         <form method='POST' action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Register Here</legend>
+                <legend class="border-bottom mb-4">View/Edit Your Info</legend>
 
                 <div class="form-group">
                     {{ form.username.label(class="form-control-label") }}
@@ -99,39 +100,11 @@
                         {{ form.email(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
-
-                <div class="form-group">
-                    {{ form.password.label(class="form-control-label") }}
-                    {% if form.password.errors %}
-                        {{ form.password(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.password.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.password(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    {{ form.confirm.label(class="form-control-label") }}
-                    {% if form.confirm.errors %}
-                        {{ form.confirm(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.confirm.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.confirm(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
             </fieldset>
             <div class="form-group">
                 {{ form.submit(class='btn btn-outline-primary') }}
             </div>
         </form>
         <br><br>
-        <h4>Already have an account? <a href="{{ url_for('login') }}">Login Here</a></h4>
     </div>
 {% endblock %} 
