--- a/website/templates/example.html
+++ b/website/templates/example.html
@@ -46,14 +46,12 @@
     <div class="row" style="margin: 30px 0px">
         <div class="col-md-5 col-3"></div>
         <div class="col-md-2 col-6">
-            <img src="{{ user.image }}" alt="" width="100%" style="border-radius: 50%;">
+            <img src="https://avatars1.githubusercontent.com/u/31940194?s=460&v=4" alt="" width="100%" style="border-radius: 50%;">
         </div>
     </div>
     <div class="container">
-        <h1 class="thin center name">{{ user.name }}</h1>
-        {% if user.tagline %}
-            <h2 class="thin center">{{ user.tagline }}</h2>
-        {% endif %}
+        <h1 class="thin center name">Harshdip Singh Deogan</h1>
+        <h2 class="thin center">Aspiring Software Engineer</h2>
         <div class="row">
             <div class="col-md-3 col-2"></div>
             <div class="col-md-6 col-8">
@@ -63,21 +61,15 @@
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6 frow-xs center">
-            {% if user.linkedin %}
                 <div class="f-xs-1">
-                    <a href="{{ user.linkedin }}" target="_blank" class="nostyle"><i class="fa fa-linkedin fa-3x"></i></a>
+                    <a href="#" class="nostyle"><i class="fa fa-linkedin fa-3x"></i></a>
                 </div>
-            {% endif %}
-            {% if user.github %}
                 <div class="f-xs-1">
-                    <a href="{{ user.github }}" target="_blank" class="nostyle"><i class="fa fa-github fa-3x"></i></a>
+                    <a href="#" class="nostyle"><i class="fa fa-github fa-3x"></i></a>
                 </div>
-            {% endif %}
-            {% if user.email %}
                 <div class="f-xs-1">
-                    <a href="mailto:{{ user.email }}" class="nostyle"><i class="fa fa-envelope-square fa-3x"></i></a>
+                    <a href="#" class="nostyle"><i class="fa fa-envelope-square fa-3x"></i></a>
                 </div>
-            {% endif %}
             </div>    
         </div>
 
