--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -32,9 +32,15 @@
             </li>
             {% if current_user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                    <a class="nav-link" href="{{ url_for('account') }}">Account</a>
                 </li>
-            {% else %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('site', username=current_user.username) }}">My Site</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                </li>
+              {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('register') }}">Register</a>
                 </li>
