--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -38,6 +38,9 @@
                   <a class="nav-link" href="{{ url_for('site', username=current_user.username) }}">My Site</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('download') }}" download="index.html">Download Site</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                 </li>
               {% else %}
