home desc changed

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,8 +2,9 @@
 
 {% block content %}
     <div class="container">
-        <h1 class="thin center" style="font-size:4rem">Automagic Websites</h1>
+        <h1 class="thin" style="font-size:4rem">Automagic Websites</h1>
+        <h4 class="thin">Easily create a custom, sleek, simple webpage for yourself in no time!</h4>
         <hr><br>
-        <p class="center">Easily create a custom, sleek, simple webpage for yourself in no time!</p>
+        <p>In today's world as a developer, having an online presence is a necessity. However, many developers don't have the time, experience, or interest in learning the fundamentals of web development to create a sleek website on their own. While there are many platforms for making websites on the market, they aren't tailored specifically to CS students and developers, and often look like they were made from a web platform. Automagic Websites hopes to change this, by offering CS students a platform to quickly create, edit, publish, and export their own simple, yet sleek, website in a matter of minutes.</p>
     </div>
 {% endblock %}
